# simple_httpd

./: .gdb_history  .gitignore  CMakeLists.txt  README.md  simple_httpd.cpp
docs/: CMakeLists.txt  color.cgi  color.cpp  index.html
